8 September 2008
+ Added ability to add pages to parent page.
+ Added ability to change page template.
+ Blank content will load Lorum upsum text instead of just
  non-breaking space.
+ Can delete uploaded templates now.
+ Added a "back to top" anchor.
+ Error message added for bad id on edit.
+ Checking character length after parseInput now.
+ Lorum text has hidden comment to help with parsing it out.
+ Comments added to update javascript
+ Added threesec-tbl for a more concrete layout structure.
+ Updated: javascript/delete_orphan/
  templates/page_templates/threesec-tbl/
  templates/orphans.tpl
  templates/page_form.tpl
  templates/page_frame.tpl
  templates/page_list.tpl
  templates/style.css
  templates/sublist.tpl
  templates/upload_template.tpl


21 August 2008
+ Added ability to upload page templates to module.
+ Updated: templates/upload_template.tpl

23 June 2008
+ Page templates can now control block type. The type can be image,
  document, media, or block. Block allows all three.
+ Dropping btype from the block. Not used.
+ Fixed bug if template only had one folder.
+ Added some new page templates.
+ Added some colorful pics to page template samples
+ Made single column different from text only icon.
+ Updated: templates/page_templates/
  templates/style.css


19 June 2008
+ Added Layout::cacheHeader functions to prevent document css from
  breaking on page caches.

Version 1.2.2
---------------------------------------------------------------
3 June 2008
+ Updated pagers to addSortHeaders.
+ Updated: templates/page_list.tpl

30 May 2008
+ Fixed direct access to page allowing view.

26 May 2008
+ Front page does not alter page title.

15 April 2008
+ Fixed some notices and a caching bug.

8 April 2008
+ Changed wording on edit text windows.

Version 1.2.1
---------------------------------------------------------------
20 March 2008
+ Added error message if blank page is attempted.

5 March 2008
+ PageSmith now allows the sorting of templates